minor fixes (button gap in settings feature)

--- a/SeatsightWebApp/public/css/styles.css
+++ b/SeatsightWebApp/public/css/styles.css
@@ -244,7 +244,7 @@
   padding-left: 10px;
   border-radius: 14px;
   height: 630px;
-  width: 780px;
+  width: 880px;
   display: flex;
   flex-direction: row; 
   justify-content: center; 
@@ -260,6 +260,7 @@
   justify-self: center;
   align-items: center;
   color: #ffffff ;
+  gap: 5px;
 }
 
 .center-it-booked-info{
